step for updating to last docker agent
https://docs.aws.amazon.com/AmazonECS/latest/developerguide/agent-update-ecs-ami.html

--- a/infrastructure/ecs-cluster.yaml
+++ b/infrastructure/ecs-cluster.yaml
@@ -126,6 +126,7 @@ Resources:
                     /opt/aws/bin/cfn-init -v --region ${AWS::Region} --stack ${AWS::StackName} --resource ECSLaunchConfiguration
                     /opt/aws/bin/cfn-signal -e $? --region ${AWS::Region} --stack ${AWS::StackName} --resource ECSAutoScalingGroup
                     /usr/bin/enable-ec2-spot-hibernation
+                    yum update -y ecs-init
 
         Metadata:
             AWS::CloudFormation::Init:
